--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
       />
       <label for="decrypt">Decrypt</label>
       <span id="options">
-        <select id="cipher" onchange="__x__.cipher = +this.value"></select>
+        <select
+          id="cipher"
+          onchange="__x__.cipher = +this.value; $mode.disabled = this.value === '2'"
+        ></select>
         <select id="mode" onchange="__x__.mode = +this.value"></select>
         <select id="kdf" onchange="__x__.kdf = +this.value"></select>
         <select id="mac" onchange="__x__.mac = +this.value"></select>
@@ -75,8 +78,8 @@
       </small>
     </div>
     <script src="wasm_exec.js"></script>
+    <script src="./version.js"></script>
     <script>
-      window.__version__ = 'v1.19.5';
       window.__x__ = {};
     </script>
     <script>
@@ -85,6 +88,7 @@
         window.$options = document.querySelector('#options');
         window.$sign = document.querySelector('#sign');
         window.$file = document.querySelector('#file');
+        window.$mode = document.querySelector('#mode');
         window.run = async () => {
           if ($run.disabled) return;
           setReady(false);
