--- a/xp/index.html
+++ b/xp/index.html
@@ -20,7 +20,6 @@
     </div>
     <div>
       <small>
-        <a href="https://github.com/jamesliu96/xp">xp</a>
         <span id="version"></span>
       </small>
     </div>
@@ -30,7 +29,7 @@
       </small>
     </div>
     <script src="/wasm_exec.js"></script>
-    <script src="/xp/version.js"></script>
+    <script src="/version.js"></script>
     <script>
       window.addEventListener('load', () => {
         const $a = document.querySelector('#a');
